--- a/web/eng/index.html
+++ b/web/eng/index.html
@@ -45,103 +45,100 @@
             <br>
 <!-- SAYFA İÇERİK BAŞI -->
 <!-- ana haber -->
-            <table border="0" cellpadding="0" cellspacing="0"
- width="695">
-              <tbody>
-                <tr>
-                  <td height="286" valign="top" width="20"><img
- src="./images/bullet6.png" alt="nokta" align="top" height="20"
- hspace="0" vspace="0" width="20"></td>
-                  <td valign="top" width="10">&nbsp;</td>
-                  <td class="metin" valign="top" width="661"><span
- class="metin"><img src="./images/54.jpg" alt="nokta" align="right"
- height="263" hspace="3" vspace="10" width="350"></span> <span
- class="baslik">The first product of Ulusal
-Dağıtım Project has been released:<br>
-Pardus Live CD</span><br>
-                  <br>
-                  <span class="metin">Pardus Live CD, bootable CD
-version of Pardus National Operating System, has been announced and
-distributed to participiants in <a
- href="http://ab2005.gantep.edu.tr/index.php">Academic Computing 2005</a>
-organized in Gaziantep.
-Live CD includes office tools (word processor, spreadsheet editor,
-presentation tool,
-etc.), internet tools (browser, e-mail client, chat, etc.), multimedia
-and graphic tools (movie player, music player, etc.), games and
-lots of other applications. </span>
-                  <p class="metin">At<a
- href="http://open.bilgi.edu.tr/freedays/"> Open Source Days</a>,
-organized by İstanbul Bilgi University, information about Pardus has
-been given to participiants and <a
- href="urunler/pardus_calisan_cd_1.0.html">Pardus
-Live CD 1.0</a> has been distributed. </p>
-                  <p class="metin">Currently,
-Web page translation work has begun for English language. We are
-planning to finish this work as soon as possible.
-Please try again and thank you for your understanding. </p>
-                  <p class="baslik"><span class="emph">Pardus is an
-open source operating system and freely distributed under the terms of</span>
-                  <a href="./gpl.html">GNU General Public License</a>. <span
- class="emph">This
-arbitrament was announced in Uludağ Weekly Newsletter published at
-2005-01-30.</span></p>
-                  <p class="baslik">&nbsp;</p>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-<!-- haberler --> <br>
-            <table class="habertablo" border="0" cellpadding="0"
- cellspacing="0" width="100%">
-              <tbody>
-                <tr style="font-size: 1px;" &gt="">
-                  <td height="10" valign="bottom" width="48%"> <img
- src="images/haber2.png" alt="haber" height="11" width="60"></td>
-                  <td valign="bottom" width="52%"> <img
- src="images/bulten1.png" alt="b&uuml;lten" height="11" width="60"></td>
-                </tr>
-                <tr>
-                  <td bgcolor="#ff6600" height="30" valign="top"> <img
- src="images/haber1.png" alt="nokta" height="19" width="60"><span
- class="haberbaslik">Uludağ News</span> </td>
-                  <td bgcolor="#990000" height="30" valign="top"> <img
- src="images/bulten2.png" alt="nokta" height="19" width="60"><span
- class="haberbaslik">Uludağ Newsletter</span> </td>
-                </tr>
-                <tr>
-                  <td class="metin" valign="top"> <br>
-                  <img src="images/bullet5.png" alt="nokta" height="11"
- width="11"> <strong> 2005-05-05 </strong>
-// Latest <a href="ftp://ftp.uludag.org.tr/pub/pardus/rootfs/0.0.6">Root
-File System (0.0.6)</a> of Pardus has been announced. With this
-release, <a
- href="http://cekirdek.uludag.org.tr/%7Emeren/root_fs_kurulum/">a new
-document </a>comes. <a
- href="http://cekirdek.uludag.org.tr/%7Emeren/root_fs_kurulum/">The
-document</a> describes how to install Root File System.<br>
-                  <img src="./images/bullet5.png" alt="nokta"
- height="11" width="11"> <strong> 2005-03-16 </strong>
-// Web pages was re-designed in accordance with incoming requests and
-questions.<br>
-                  <img src="./images/bullet5.png" alt="nokta"
- height="11" width="11"> <strong> 2004-12-07</strong>
-// Uludağ Weeky Newsletter archive was started to be published. You can
-access Newsletters via rss. (<a
- href="http://www.uludag.org.tr/bulten/bulten.xml">rss feed</a>) </td>
-                  <td class="metin" valign="top"> <br>
-                  <img src="images/bullet5.png" alt="nokta" height="11"
- width="11"> <a href="bulten/arsiv/21032005.html"><strong>2005-03-21</strong></a>
-// Web page, Pardus 1.0, FTP Service ...<br>
-                  <img src="./images/bullet5.png" alt="nokta"
- height="11" width="11"> <strong><a href="bulten/arsiv/27022005.html">2005-02-27</a></strong>
-// Open Source Days, quality team, new documents... <br>
-                  <img src="./images/bullet5.png" alt="nokta"
- height="11" width="11"> <strong><a href="bulten/index.html">Newsletter
-Archive...</a></strong> </td>
-                </tr>
-              </tbody>
-            </table>
+<table width="695" border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20" height="286" valign="top"><img src="./images/bullet6.png" alt="nokta" width="20" height="20" hspace="0" vspace="0" align="top"></td>
+<td width="10" valign="top">&nbsp;</td>
+<td width="661" valign="top" class="metin"><span class="metin"><img src="./images/54.jpg" alt="nokta" width="350" height="263" hspace="3" vspace="10" align="right"></span>
+<span class="baslik">The first product of Ulusal Dağıtım Project has been released:<br> Pardus Live CD</span><br>
+<br>
+
+<span class="metin">Pardus Live CD, bootable CD version of Pardus National Operating System, has been announced and distributed to participiants
+ in <a href="http://ab2005.gantep.edu.tr/index.php">Academic Computing 2005</a> organized in Gaziantep. Live CD includes office tools
+ (word processor, spreadsheet editor,presentation tool,etc.), internet tools (browser, e-mail client, chat, etc.), multimedia and graphic tools
+ (movie player, music player, etc.), games and lots of other applications. </span>
+
+<p class="metin">At <a href="http://open.bilgi.edu.tr/freedays/">Open Source Days</a>, organized by İstanbul Bilgi University,
+ information about Pardus has been given to participiants and <a href="urunler/pardus_calisan_cd_1.0.html">Pardus Live CD 1.0</a> has been distributed.
+</p>
+
+<p class="metin">Currently, Web page translation work has begun for English language. We are planning to finish this work as soon as possible.
+ Please try again and thank you for your understanding.
+</p>
+
+<p class="baslik"><span class="emph">Pardus is an open source operating system and freely distributed under the terms of</span>
+ <a href="./gpl.html">GNU General Public License</a>. <span class="emph">This arbitrament was announced in Uludağ Weekly Newsletter published at 2005-01-30.</span>
+</p>
+
+<p class="baslik">&nbsp;</p></td>
+</tr>
+</table>
+
+<!-- haberler -->
+<br>
+<table width="100%" border="0" cellpadding="0" cellspacing="0" class="habertablo">
+<tr style="font-size:1px;">
+	<td width="48%" height="10" valign="bottom">
+		<img src="images/haber2.png" alt="haber" width="60" height="11">
+	</td>
+	<td width="52%" valign="bottom">
+		<img src="images/bulten1.png" alt="bülten" width="60" height="11">
+	</td>
+</tr>
+<tr>
+	<td height="30" valign="top" bgcolor="#ff6600">
+		<img src="images/haber1.png" alt="nokta" width="60" height="19">
+		<span class="haberbaslik">Uludağ News</span>
+	</td>
+	<td height="30" valign="top" bgcolor="#990000">
+		<img src="images/bulten2.png" alt="nokta" width="60" height="19">
+		<span class="haberbaslik">Uludağ Newsletter</span>
+	</td>
+</tr>
+<tr>
+<td valign="top" class="metin">
+<br>
+<img src="./images/bullet5.png" alt="nokta" width="11" height="11">
+<strong> 2005-05-05</strong>
+// Latest <a href="ftp://ftp.uludag.org.tr/pub/pardus/rootfs/0.0.6">Root FileSystem (0.0.6)</a> of Pardus has been announced.
+ With this release, <a href="http://cekirdek.uludag.org.tr/%7Emeren/root_fs_kurulum/">a new document</a> comes.
+ <a href="http://cekirdek.uludag.org.tr/%7Emeren/root_fs_kurulum/">The document</a> describes how to install Root File System.<br>
+
+<img src="./images/bullet5.png" alt="nokta" width="11" height="11">
+<strong> 2005-03-16</strong>
+// Web pages was re-designed in accordance with incoming requests and questions.<br>
+
+<img src="./images/bullet5.png" alt="nokta" width="11" height="11">
+<strong> 2004-12-07</strong>
+// Uludağ Weekly Newsletter archive was started to be published. You can access Newsletters via rss.
+ (<a href="http://www.uludag.org.tr/bulten/bulten.xml">rss feed</a>).<br>
+</td>
+
+<td valign="top" class="metin">
+
+<br>
+<img src="./images/bullet5.png" alt="nokta" width="11" height="11"> 
+<strong><a href="bulten/arsiv/06102005.html">2005-06-10</a></strong>
+// New developers, Pardul, Gözlük, SVN Repositories...
+<br>
+<img src="./images/bullet5.png" alt="nokta" width="11" height="11"> 
+<strong><a href="bulten/arsiv/05052005.html">2005-05-05</a></strong>
+// Pardus 1.1, Root FileSystem 0.0.6, Pardul, Pardil, Zemberek, ViewCVS...
+<br>
+<img src="./images/bullet5.png" alt="nokta" width="11" height="11"> 
+<strong><a href="bulten/arsiv/21032005.html">2005-03-21</a></strong>
+// Web page, Pardus 1.0, FTP Service...
+<br>
+<img src="./images/bullet5.png" alt="nokta" width="11" height="11"> 
+<strong><a href="bulten/arsiv/27022005.html">2005-02-27</a></strong>
+// Open Source Days, quality team, new documents...
+<br>
+<img src="./images/bullet5.png" alt="nokta" width="11" height="11">
+<strong><a href="bulten/index.html">Newsletter Archive...</a></strong>
+
+</td>
+</tr>
+</table>
 <!-- SAYFA İÇERİK SONU -->
 <!-- yayın hakkı --><br>
             <br>
