--- a/trunk/web/eng/bulten/arsiv/21022005.html
+++ b/trunk/web/eng/bulten/arsiv/21022005.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
@@ -137,12 +136,10 @@ fazlamesai.net[15]'in 16 Şubat 2005 günü, saat 22:30'da yayınlanan programı
 <br>
 <br>
 <p class="not">
-Ulusal Dağıtım sayfalarında bulunan bilgi ve belgelerin,
-kaynak gösterilmek koşulu ile kullanılması serbesttir.
+Information and documents on Uludağ Project web pages can be used freely anywhere with original source credit.
 <em><br>
 <strong>TÜBİTAK - UEKAE, PK.74 41470, Gebze / Kocaeli.</strong></em>
-Bilgi ve önerileriniz için
-<a href="mailto:bilgi%20at%20uludag.org.tr">bilgi
+For information and suggestion(s) please write to <a href="mailto:bilgi%20at%20uludag.org.tr">bilgi
 at uludag.org.tr</a>
 </p>
 <br>
