--- a/web/eng/iletisim.html
+++ b/web/eng/iletisim.html
@@ -62,8 +62,8 @@
 	                <b>-= Pardus Technical =-</b><br><br>
 			Technical discussion list of Pardus, only technical issues will be discussed in this list. You can ask questions about problems with applications in Pardus.
 			<br><br>
-			You can visit <a href="http://liste.uludag.org.tr/cgi-bin/mailman/listinfo/pardus-teknik">http://liste.uludag.org.tr/cgi-bin/mailman/listinfo/kalite</a>
-			for subscriber actions, and <a href="http://liste.uludag.org.tr/pardus-teknik/">http://liste.uludag.org.tr/kalite/</a>
+			You can visit <a href="http://liste.uludag.org.tr/cgi-bin/mailman/listinfo/pardus-teknik">http://liste.uludag.org.tr/cgi-bin/mailman/listinfo/pardus-teknik</a>
+			for subscriber actions, and <a href="http://liste.uludag.org.tr/pardus-teknik/">http://liste.uludag.org.tr/pardus-teknik/</a>
 			to read list archives.<br><br>
 			
 	                <b>-= Quality =-</b><br><br>
